@@ -58,9 +58,10 @@ unique.default <- function(x, incomparables = FALSE, fromLast = FALSE, ...)
     if(is.factor(x))
 	factor(z, levels = seq_len(nlevels(x)), labels = levels(x),
                ordered = is.ordered(x))
-    else if(inherits(x, "POSIXct") || inherits(x, "Date"))
-
-        structure(z, class=class(x))
+    else if(inherits(x, "POSIXct"))
+        structure(z, class = class(x), tzone = attr(x, "tzone"))
+    else if(inherits(x, "Date"))
+        structure(z, class = class(x))
     else z
 }
 
